# OPexample_reduced

./: .gitignore  CMakeLists.txt  Code diagram.canvas  README.md  comparisonNew.sh  dconfig  eval_runs_all.sh  reruns.sh
.obsidian/: core-plugins-migration.json  core-plugins.json  hotkeys.json  workspace.json
data/instances/: batches_from_file.ipynb  batches_from_files.py
docs/: A3_doc.html  Building and compiling.md  Data sources.md  fatigue.md  warehouse.md
docs/html/: alns_8hpp.html  alns_8hpp.js  alns_8hpp_source.html  annotated.html  annotated_dup.js  classALNS-members.html  classALNS.html  classALNS.js  classOperators-members.html  classOperators.html  classOperators.js  classPI-members.html  classPI.html  classPI.js  classWorker-members.html  classWorker.html  classWorker.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  fatigue_8hpp.html  fatigue_8hpp.js  fatigue_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  index.js  inputs_8hpp.html  inputs_8hpp.js  inputs_8hpp_source.html  menudata.js  navtreedata.js  navtreeindex0.js  operators_8hpp.html  operators_8hpp.js  operators_8hpp_source.html  (+11 more)
include/: alns.hpp  fatigue.hpp  inputs.hpp  operators.hpp  problem_instance.hpp  routing.hpp  warehouse.hpp
slurm/: gen_A1.py  gen_A2.py  gen_A3.py  gen_B0.py  gen_B1.py  gen_B1n100.py  gen_B2.py  gen_B2Agn.py
src/: alns.cpp  fatigue.cpp  inputs.cpp  main.cpp  operators.cpp  problem_instance.cpp  routing.cpp  warehouse.cpp
(+3842 files in other folders)
