cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# Release (std), RelWithDebInfo (callgrind, perf?)
set(CMAKE_BUILD_TYPE Release)
project(JOBASP-f VERSION 0.1.0 LANGUAGES CXX)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable(JOBASP-f ${SOURCES})
target_link_libraries(JOBASP-f PRIVATE stdc++fs)
